@@ -97,6 +97,7 @@ export const Toolbar = ({
             onChange={updateZoomLevel}
             variant="standard"
             disableUnderline
+            title="Zoom level"
             data-testid="zoom-level">
             <MenuItem value={'4'}>400%</MenuItem>
             <MenuItem value={'2'}>200%</MenuItem>
@@ -111,16 +112,29 @@ export const Toolbar = ({
             <MenuItem value={'0.05'}>5%</MenuItem>
           </Select>
         </FormControl>
-        <IconButton size="small" color="inherit" aria-label="zoom in" onClick={onZoomIn} data-testid="zoom-in">
+        <IconButton
+          size="small"
+          color="inherit"
+          aria-label="zoom in"
+          title="Zoom in"
+          onClick={onZoomIn}
+          data-testid="zoom-in">
           <ZoomInIcon fontSize="small" />
         </IconButton>
-        <IconButton size="small" color="inherit" aria-label="zoom out" onClick={onZoomOut} data-testid="zoom-out">
+        <IconButton
+          size="small"
+          color="inherit"
+          aria-label="zoom out"
+          title="Zoom out"
+          onClick={onZoomOut}
+          data-testid="zoom-out">
           <ZoomOutIcon fontSize="small" />
         </IconButton>
         <IconButton
           size="small"
           color="inherit"
           aria-label="fit to screen"
+          title="Fit to screen"
           onClick={onFitToScreen}
           data-testid="fit-to-screen">
           <AspectRatioIcon fontSize="small" />
@@ -129,12 +143,13 @@ export const Toolbar = ({
           size="small"
           color="inherit"
           aria-label="arrange-all"
+          title="Arrange all"
           disabled={autoLayout}
           onClick={onArrangeAll}
           data-testid="arrange-all">
           <AccountTreeIcon fontSize="small" />
         </IconButton>
-        <IconButton size="small" color="inherit" aria-label="share" onClick={onShare} data-testid="share">
+        <IconButton size="small" color="inherit" aria-label="share" title="Share" onClick={onShare} data-testid="share">
           <ShareIcon fontSize="small" />
         </IconButton>
 
